<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grident_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/bg_home_topper"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layTopMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:src="@drawable/ic_back" />

            <LinearLayout
                android:id="@+id/layGoPreminum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right|center"
                android:background="@drawable/ic_premium"
                android:gravity="right|center" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layTopMenu"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:gravity="center_vertical"
                android:text="@string/feedback_text"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:fontFamily="@font/open_sans_regular"
                android:gravity="center_vertical"
                android:text="@string/feedback_question"
                android:textColor="@color/white"
                android:textFontWeight="400"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_theme_bg"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_15sdp"
            android:layout_weight="1"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_1sdp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/tvNotWorking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_regular"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:paddingVertical="@dimen/_5sdp"
                    android:text="@string/feedback_translation"
                    android:textColor="#0E0F37"
                    android:textFontWeight="400"
                    android:textSize="@dimen/_12sdp" />

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_8sdp"
                    app:cardElevation="@dimen/_1sdp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/tvTooMuchAds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans_regular"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/_8sdp"
                        android:paddingVertical="@dimen/_5sdp"
                        android:text="@string/feedback_ad"
                        android:textColor="#0E0F37"
                        android:textFontWeight="400"
                        android:textSize="@dimen/_12sdp" />

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_8sdp"
                    app:cardElevation="@dimen/_1sdp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/tvCrash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans_regular"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/_8sdp"
                        android:paddingVertical="@dimen/_5sdp"
                        android:text="@string/feedback_crash"
                        android:textColor="#0E0F37"
                        android:textFontWeight="400"
                        android:textSize="@dimen/_12sdp" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_8sdp"
                    app:cardElevation="@dimen/_1sdp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/tvSpeakerNot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans_regular"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/_8sdp"
                        android:paddingVertical="@dimen/_5sdp"
                        android:text="@string/feedback_auto_speak"
                        android:textColor="#0E0F37"
                        android:textFontWeight="400"
                        android:textSize="@dimen/_12sdp" />

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_8sdp"
                    app:cardElevation="@dimen/_1sdp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/tvOther"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans_regular"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/_8sdp"
                        android:paddingVertical="@dimen/_5sdp"
                        android:text="@string/feedback_other"
                        android:textColor="#0E0F37"
                        android:textFontWeight="400"
                        android:textSize="@dimen/_12sdp" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_130sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_1sdp"
                app:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/open_sans_regular"
                    android:hint="@string/feedback_hint"
                    android:padding="@dimen/_8sdp"
                    android:textColor="#0E0F37"
                    android:textColorHint="#818DBA"
                    android:textFontWeight="400"
                    android:textSize="@dimen/_10sdp" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layCancel"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_37sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/btn_translate_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_5sdp"
                android:fontFamily="@font/open_sans_regular"
                android:gravity="center"
                android:text="@string/feedback_send"
                android:textColor="#FFFFFF"
                android:textFontWeight="600"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>