<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newBgColor"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_170sdp"
            android:background="@drawable/bg_home_topper"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layTopMenu"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/imgBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_back" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right|center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/ic_limited_offer"
                    android:gravity="right|center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans_regular"
                        android:gravity="center"
                        android:text="@string/premium_offer"
                        android:textColor="#818DBA"
                        android:textFontWeight="400"
                        android:textSize="@dimen/_9sdp" />

                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/_230sdp"
                    android:layout_height="@dimen/_230sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_permium_cartoon" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bottom_white_bg"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layPreminumPer"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/btn_premium_bg_orange"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:paddingVertical="@dimen/_8sdp">

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:src="@drawable/ic_offer_price" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_regular"
                        android:text="@string/premium_discount"
                        android:textColor="#FFFFFF"
                        android:textFontWeight="700"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:fontFamily="@font/open_sans_bold"
                    android:gravity="center_vertical"
                    android:text="@string/premium_forever"
                    android:textColor="#0E0F37"
                    android:textFontWeight="700"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layPreminumPer"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:fontFamily="@font/open_sans_regular"
                    android:gravity="center_vertical"
                    android:text="@string/premium_sum"
                    android:textColor="#818DBA"
                    android:textFontWeight="600"
                    android:textSize="@dimen/_12sdp" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_60sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:orientation="horizontal">


                                <ImageView
                                    android:layout_width="@dimen/_35sdp"
                                    android:layout_height="@dimen/_35sdp"
                                    android:src="@drawable/ic_no_ads" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:layout_weight="1"
                                android:fontFamily="@font/open_sans_regular"
                                android:text="@string/premium_ad"
                                android:textColor="#000000"
                                android:textFontWeight="600"
                                android:textSize="@dimen/_12sdp" />

                            <ImageView
                                android:layout_width="@dimen/_22sdp"
                                android:layout_height="@dimen/_22sdp"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_premium_round" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:orientation="horizontal">




                                <ImageView
                                    android:layout_width="@dimen/_35sdp"
                                    android:layout_height="@dimen/_35sdp"
                                    android:src="@drawable/ic_camera" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:layout_weight="1"
                                android:fontFamily="@font/open_sans_regular"
                                android:text="@string/premium_camera"
                                android:textColor="#000000"
                                android:textFontWeight="600"
                                android:textSize="@dimen/_12sdp" />

                            <ImageView
                                android:layout_width="@dimen/_22sdp"
                                android:layout_height="@dimen/_22sdp"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_premium_round" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:orientation="horizontal">




                                <ImageView
                                    android:layout_width="@dimen/_35sdp"
                                    android:layout_height="@dimen/_35sdp"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/ic_chat" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:layout_weight="1"
                                android:fontFamily="@font/open_sans_regular"
                                android:text="@string/premium_conversation"
                                android:textColor="#000000"
                                android:textFontWeight="600"
                                android:textSize="@dimen/_12sdp" />

                            <ImageView
                                android:layout_width="@dimen/_22sdp"
                                android:layout_height="@dimen/_22sdp"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_premium_round" />

                        </LinearLayout>




                    </LinearLayout>

                </ScrollView>
            </RelativeLayout>
        </LinearLayout>
            <LinearLayout
                android:id="@+id/layBuyNow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/btn_translate_bg"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnPro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:fontFamily="@font/open_sans_regular"
                    android:gravity="center"
                    android:text="@string/premium_buy"
                    android:textColor="#FFFFFF"
                    android:textFontWeight="700"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvRestorePurchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/premium_restore"
                android:textColor="#818DBA"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textFontWeight="400"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>




    </RelativeLayout>




</LinearLayout>
